include/Win32/Physics.NGDImport.hpp

struct NewtonWorldConvexCastReturnInfo;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef unsigned unsigned_int;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonMaterial;
typedef void * PNewtonCollision;
typedef NewtonWorldConvexCastReturnInfo *PNewtonWorldConvexCastReturnInfo;
struct DECLSPEC_DRECORD NewtonWorldConvexCastReturnInfo
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	System::StaticArray<float, 4> m_normalOnHitPoint;
	int m_contactID;
	void *m_hitBody;
	float m_penetration;
};
typedef void __cdecl (*NewtonDestroyWorld)(const void * NewtonWorld);
typedef NewtonDestroyWorld *PNewtonDestroyWorld;
typedef int __cdecl (*NewtonIslandUpdate)(const void * World, void * islandHandle, int bodyCount);
typedef NewtonIslandUpdate *PNewtonIslandUpdate;
typedef void __cdecl (*NewtonBodyLeaveWorld)(const void * Body, int threadIndex);
typedef NewtonBodyLeaveWorld *PNewtonBodyLeaveWorld;
typedef void __cdecl (*NewtonDestroyBodyByExeciveForce)(const void * Body, const void * contact);
typedef NewtonDestroyBodyByExeciveForce *PNewtonDestroyBodyByExeciveForce;
typedef void __cdecl (*NewtonCollisionDestructor)(const void * World, const void * collision);
typedef NewtonCollisionDestructor *PNewtonCollisionDestructor;
typedef unsigned __cdecl (*NewtonWorldRayPrefilterCallback)(const void * Body, const void * collision, void * userData);
typedef float __cdecl (*NewtonWorldRayFilterCallback)(const void * Body, const PdFloat hitNormal, int collisionID, void * userData, float intersetParam);
typedef NewtonWorldRayFilterCallback *PNewtonWorldRayFilterCallback;
typedef int __cdecl (*NewtonOnAABBOverlap)(const void * material, const void * body0, const void * body1, int threadIndex);
typedef NewtonOnAABBOverlap *PNewtonOnAABBOverlap;
typedef void __cdecl (*NewtonContactsProcess)(const void * contact, float timestep, int threadIndex);
typedef NewtonContactsProcess *PNewtonContactsProcess;
typedef void __cdecl (*NewtonBodyIterator)(const void * Body, void * userData);
typedef NewtonBodyIterator *PNewtonBodyIterator;
typedef void __cdecl (*NewtonJointIterator)(const void * joint, void * userData);
typedef NewtonJointIterator *PNewtonJointIterator;
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" void __cdecl NewtonSetMinimumFrameRate(const void * NewtonWorld, float frameRate);
extern "C" void __cdecl NewtonSetBodyLeaveWorldEvent(const void * NewtonWorld, PNewtonBodyLeaveWorld callback);
extern "C" void __cdecl NewtonSetWorldSize(const void * NewtonWorld, const PdFloat minPoint, const PdFloat maxPoint);
extern "C" void __cdecl NewtonSetIslandUpdateEvent(const void * NewtonWorld, PNewtonIslandUpdate NewtonIslandUpdate);
extern "C" void __cdecl NewtonSetCollisionDestructor(const void * NewtonWorld, PNewtonCollisionDestructor callback);
extern "C" void __cdecl NewtonSetDestroyBodyByExeciveForce(const void * NewtonWorld, PNewtonDestroyBodyByExeciveForce callback);
extern "C" void __cdecl NewtonWorldForEachJointDo(const void * NewtonWorld, PNewtonJointIterator callback, void * userData);
extern "C" void __cdecl NewtonWorldForEachBodyInAABBDo(const void * NewtonWorld, const PdFloat p0, const PdFloat p1, PNewtonBodyIterator callback, void * userData);
extern "C" void __cdecl NewtonWorldSetUserData(const void * NewtonWorld, void * userData);
extern "C" void * __cdecl NewtonWorldGetUserData(const void * NewtonWorld);
extern "C" void __cdecl NewtonWorldSetDestructorCallBack(const void * NewtonWorld, PNewtonDestroyWorld NewtonDestroyWorld);
extern "C" PNewtonDestroyWorld __cdecl NewtonWorldGetDestructorCallBack(const void * NewtonWorld);
extern "C" void __cdecl NewtonWorldRayCast(const void * NewtonWorld, const PdFloat p0, const PdFloat p1, PNewtonWorldRayFilterCallback filter, void * userData, NewtonWorldRayPrefilterCallback prefilter);
extern "C" int __cdecl NewtonWorldConvexCast(const void * NewtonWorld, const PdFloat matrix, const PdFloat target, const void * shape, PdFloat hitParam, void * userData, NewtonWorldRayPrefilterCallback prefilter, PNewtonWorldConvexCastReturnInfo info, int maxContactsCount, int threadIndex);
extern "C" int __cdecl NewtonWorldGetBodyCount(const void * NewtonWorld);
extern "C" int __cdecl NewtonWorldGetConstraintCount(const void * NewtonWorld);
extern "C" void * __cdecl NewtonIslandGetBody(const void * island, int bodyIndex);
extern "C" void __cdecl NewtonIslandGetBodyAABB(const void * island, int bodyIndex, PdFloat p0, PdFloat p1);
extern "C" int __cdecl NewtonMaterialCreateGroupID(const void * NewtonWorld);
extern "C" int __cdecl NewtonMaterialGetDefaultGroupID(const void * NewtonWorld);
extern "C" void __cdecl NewtonMaterialDestroyAllGroupID(const void * NewtonWorld);
extern "C" void * __cdecl NewtonMaterialGetUserData(const void * NewtonWorld, int id0, int id1);
extern "C" void __cdecl NewtonMaterialSetSurfaceThickness(const void * NewtonWorld, int id0, int id1, float thickness);
extern "C" void __cdecl NewtonMaterialSetContinuousCollisionMode(const void * NewtonWorld, int id0, int id1, int state);
extern "C" void __cdecl NewtonMaterialSetCollisionCallback(const void * NewtonWorld, int id0, int id1, void * userData, PNewtonOnAABBOverlap AABBOverlap, PNewtonContactsProcess process);
extern "C" void __cdecl NewtonMaterialSetDefaultSoftness(const void * NewtonWorld, int id0, int id1, float value);
extern "C" void __cdecl NewtonMaterialSetDefaultElasticity(const void * NewtonWorld, int id0, int id1, float elasticCoef);
extern "C" void __cdecl NewtonMaterialSetDefaultCollidable(const void * NewtonWorld, int id0, int id1, int state);
extern "C" void __cdecl NewtonMaterialSetDefaultFriction(const void * NewtonWorld, int id0, int id1, float staticFriction, float kineticFriction);
extern "C" void * __cdecl NewtonWorldGetFirstMaterial(const void * NewtonWorld);
extern "C" void * __cdecl NewtonWorldGetNextMaterial(const void * NewtonWorld, const void * material);
extern "C" void * __cdecl NewtonWorldGetFirstBody(const void * NewtonWorld);
extern "C" void * __cdecl NewtonWorldGetNextBody(const void * NewtonWorld, const void * curBody);
extern "C" void * __cdecl NewtonMaterialGetMaterialPairUserData(const void * material);
extern "C" unsigned __cdecl NewtonMaterialGetContactFaceAttribute(const void * material);
extern "C" void * __fastcall NewtonMaterialGetBodyCollidingShape(const void * material, const void * Body);
extern "C" unsigned __cdecl NewtonMaterialGetBodyCollisionID(const void * material, void * Body);
extern "C" float __cdecl NewtonMaterialGetContactNormalSpeed(const void * material);
extern "C" void __cdecl NewtonMaterialGetContactForce(const void * material, const void * Body, PdFloat Force);
extern "C" void __cdecl NewtonMaterialGetContactPositionAndNormal(const void * material, const void * Body, const PdFloat Posit, const PdFloat normal);
extern "C" void __cdecl NewtonMaterialGetContactTangentDirections(const void * material, const void * Body, const PdFloat Dir0, const PdFloat Dir1);
extern "C" float __cdecl NewtonMaterialGetContactTangentSpeed(const void * material, int index);
extern "C" void __cdecl NewtonMaterialSetContactSoftness(const void * material, float softness);
extern "C" void __cdecl NewtonMaterialSetContactElasticity(const void * material, float restitution);
extern "C" void __cdecl NewtonMaterialSetContactFrictionState(const void * material, int state, int index);
extern "C" void __cdecl NewtonMaterialSetContactFrictionCoef(const void * material, float staticFrictionCoef, float kineticFrictionCoef, int index);
extern "C" void __cdecl NewtonMaterialSetContactNormalAcceleration(const void * material, float accel);
extern "C" void __cdecl NewtonMaterialSetContactNormalDirection(const void * material, PdFloat directionVector);
extern "C" void __cdecl NewtonMaterialSetContactTangentAcceleration(const void * material, float accel, int index);
extern "C" void __cdecl NewtonMaterialContactRotateTangentDirections(const void * material, const PdFloat directionVector);
extern "C" void * __cdecl NewtonCreateNull(const void * NewtonWorld);
extern "C" void * __cdecl NewtonCreateSphere(const void * NewtonWorld, float radiusX, float radiusY, float radiusZ, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateBox(const void * NewtonWorld, float dx, float dy, float dz, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateCone(const void * NewtonWorld, float radius, float height, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateCapsule(const void * NewtonWorld, float radius, float height, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateCylinder(const void * NewtonWorld, float radius, float height, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateChamferCylinder(const void * NewtonWorld, float raduis, float height, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateConvexHull(const void * NewtonWorld, int count, const PdFloat vertexCloud, int strideInBytes, float tolerance, int shapeID, const PdFloat offsetMatrix);
extern "C" void * __cdecl NewtonCreateConvexHullFromMesh(const void * NewtonWorld, void * мesh, float tolerance, int shapeID);
extern "C" void * __cdecl NewtonCreateConvexHullModifier(const void * NewtonWorld, const void * convexHullCollision, int shapeID);
extern "C" void __cdecl NewtonConvexHullModifierGetMatrix(const void * convexHullCollision, PdFloat matrix);
extern "C" void __cdecl NewtonConvexHullModifierSetMatrix(const void * convexHullCollision, const PdFloat matrix);
extern "C" int __cdecl NewtonCollisionIsTriggerVolume(const void * convexCollision);
extern "C" void __cdecl NewtonCollisionSetAsTriggerVolume(const void * convexCollision, int trigger);
extern "C" void __cdecl NewtonCollisionSetMaxBreakImpactImpulse(const void * convexHullCollision, float maxImpactImpulse);
extern "C" float __cdecl NewtonCollisionGetMaxBreakImpactImpulse(const void * convexHullCollision);
extern "C" void __cdecl NewtonCollisionSetUserID(const void * convexCollision, unsigned id);
extern "C" unsigned __cdecl NewtonCollisionGetUserID(const void * convexCollision);
using namespace Physics;